--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
 					</div>
 				</nav>
 			</div>
+			<!-- Hamburger -->
+			<div class="hamburger_container">
+				<i class="fas fa-bars trans_200"></i>
+			</div>
 		</header>
 
 		<!-- Menu -->
@@ -129,7 +133,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-7 form-group">
-							<div class="mapouter">
+							<div class="mapouter" style="max-width:300px;">
 								<div class="gmap_canvas">
 									<iframe width="600" height="300" id="gmap_canvas" src="https://maps.google.com/maps?q=imt%20school%20do&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.whatismyip-address.com"></a><br>
 									<style>
