--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 					<div class="container">
 						<div class="row row-eq-height">
 
-							<div class="col-lg-6 order-2 order-lg-1">
+							<div class="col-lg-6 order-2 order-lg-1 pt-50">
 								<div class="become_title">
 									<h1 class="clr-green">About CoreTech</h1>
 								</div>
@@ -107,7 +107,7 @@
 								</p>
 							</div>
 
-							<div class="col-lg-6 order-1 order-lg-2">
+							<div class="col-lg-6 order-1 order-lg-2 pt-50">
 								<div class="become_image">
 									<img src="images/about.png" alt="">
 								</div>
